--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,67 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.btnCall {
+  display: block;
+  width: 40px;
+  height: 27px;
+  position: absolute;
+  top: 2%;
+  right: 5%;
+}
+
+.btnCall::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: #000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: top 0.5s 0s, transform 0.5s 0.5s;
+}
+
+.btnCall::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: #000;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transition: bottom 0.5s 0s, transform 0.5s 0.5s;
+}
+
+.btnCall span {
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: #000;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -1px;
+  text-indent: -9999px;
+  transition: 0.5s;
+}
+
+.btnCall:hover::before {
+  transform: rotate(45deg);
+  top: calc(50% - 1px);
+}
+
+.btnCall:hover::after {
+  transform: rotate(-45deg);
+  bottom: calc(50% - 1px);
+}
+
+.btnCall:hover span {
+  transform: translateX(100%);
+  opacity: 0;
+}
+.title{
+  text-align:center;
+  font-size:20px;
+}
