--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -73,7 +73,6 @@
     width: 8px;
     background-color: #f87171;
     border-radius: 50%;
-    display: flex;
 }
 
 .react-calendar {
@@ -126,4 +125,12 @@ input[type="text"] {
     width: 120px;
     border-bottom: 1px solid #333;
     display: inline-block;
+}
+
+@media screen and (max-width:380px) {
+
+    .date_txt {
+        width: auto;
+    }
+
 }
