--- a/src/css/login.css
+++ b/src/css/login.css
@@ -5,7 +5,7 @@
     color: #333;
 }
 
-input[type="text"] {
+.box_wrap input[type="text"] {
     width: 100%;
     border: none;
     border-bottom: 1px solid #333;
