개인프로젝트 - 디자인 및 기능 구현 드정리 및 수정

--- a/src/css/mypage.css
+++ b/src/css/mypage.css
@@ -76,4 +76,13 @@
         margin-bottom: 22px;
     }
 
+    .mypage .mypage_wrap01 figure img {
+        width: 70px;
+        height: 70px;
+    }
+
+    .mypage .mypage_wrap01 p,
+    .mypage .mypage_wrap01 h3 {
+        font-size: 20px;
+    }
 }
