--- a/src/css/rank.css
+++ b/src/css/rank.css
@@ -1,8 +1,8 @@
 .rank_wrap {
-    width: 70%;
+    width: 100%;
     position: absolute;
-    top: 250px;
-    left: 20px;
+    top: 50%;
+    transform: translateY(-50%, -50%);
     text-align: center;
     background: #fff;
     box-shadow: 3px 3px 6px 2px rgba(0, 0, 0, .3);
