개인프로젝트 - OpenWAX 맞추기 완료

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -99,7 +99,7 @@ footer ul li:nth-child(2) {
   border-top: none;
 }
 
-footer ul li:nth-child(2) a {
+footer ul li:nth-child(2) button {
   position: absolute;
   top: -33px;
   text-indent: -99999px;
